# Projeto_EliteMotors

./: .pdm-python  README.md
backend/: .pdm-python  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/elitemotors/: admin.py  apps.py  models.py  serializers.py  views.py
backend/elitemotors/migrations/: 0001_initial.py  0002_carro_imagem.py  0002_cor.py
backend/elitemotors/models/: __init__.py  carro.py
backend/elitemotors/serializers/: __init__.py  acessorio.py  carro.py  cor.py
backend/elitemotors/views/: __init__.py  acessorio.py  carro.py  cor.py
backend/uploader/migrations/: 0001_initial.py
backend/usuario/migrations/: 0001_initial.py
backend/utils/: files.py
mobile/: package-lock.json
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.vue
web/src/components/template/: CadastroComp.vue  FooterComp.vue  HeaderComp.vue  LoginComp.vue  Modal.vue
web/src/plugins/: api.js
web/src/router/: index.js
web/src/stores/: auth.js
web/src/views/: CadastroView.vue  CarrosView.vue  HomeView.vue  InfoView.vue  LoginView.vue  OfertasView.vue
