[project]
name = "backend-django-elitemotors"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GuilhermeHalter", email = "halter.guilhermenunes@gmail.com"},
]
dependencies = [
    "django>=5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
